Fixed some ui ☕

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Inter&family=Playfair+Display:ital,wght@0,600;1,600&family=Poppins:wght@700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Inter&family=Playfair+Display:ital,wght@0,600;1,600;1,700&display=swap"
 			rel="stylesheet"
 		/>
 	</head>
